--- a/style.css
+++ b/style.css
@@ -64,3 +64,15 @@ body {
         width:100%;
     }
 }
+@media screen and (min-width:993px){
+    .content{
+        width:100%;
+    }
+    .sideboard{
+        width:100%;
+        background-color:yellow;
+    }
+    .banner{
+        background-color:blue;
+    }
+}
